# aperio

./: .gitignore  AGENTS.md  CHANGELOG.md  CHECKPOINT.md  CLAUDE.md  Cargo.toml  NOTICE  README.md
.config/: nextest.toml
crates/aperio-ts-shim/: Cargo.toml
crates/hale-cli/: Cargo.toml  build.rs
crates/hale-cli/src/: main.rs  pkg.rs
crates/hale-cli/tests/: form_hashmap_qualified.rs  pkg_fetch.rs  qualified_type_forward_ref.rs  three_hop_import.rs
crates/hale-cli/tests/fixtures/form-hashmap-qualified-app/: main.hl
crates/hale-cli/tests/fixtures/form-hashmap-qualified-model/: main.hl
crates/hale-cli/tests/fixtures/qualified-type-fwd-app/: main.hl
crates/hale-cli/tests/fixtures/qualified-type-fwd-lib/: main.hl
crates/hale-cli/tests/fixtures/three-hop-app/: main.hl
crates/hale-cli/tests/fixtures/three-hop-lib-mid/: wrap.hl
crates/hale-cli/tests/fixtures/three-hop-lib-util/: box.hl
crates/hale-codegen/: Cargo.toml
crates/hale-codegen/runtime/: lotus_arena.c  lotus_shm_ring.c  lotus_tls.c  lotus_treesitter.rs
crates/hale-codegen/runtime/stdlib/: bytes_builder.hl  cli.hl  core.hl  http.hl  io_tcp.hl  json.hl  lang.hl  log.hl  process.hl  source.hl  test.hl  text.hl  ts.hl  yaml.hl
crates/hale-codegen/src/: codegen.rs  lib.rs  mangle.rs
crates/hale-codegen/src/bus/: dispatch.rs  runtime.rs
crates/hale-codegen/src/channels/: mod.rs
crates/hale-codegen/src/form/: mod.rs
crates/hale-codegen/src/locus/: decl.rs  dissolve.rs  instantiation.rs  method.rs  mod.rs
crates/hale-codegen/src/shared/: builtins.rs  mod.rs
crates/hale-codegen/src/stdlib/: bus.rs  bytes.rs  crypto.rs  io_file.rs  io_fs.rs  io_stdin.rs  io_tcp.rs  io_tls.rs  math.rs  mod.rs  process.rs  rand.rs  str.rs  time.rs
crates/hale-codegen/tests/: array_repeat.rs  bindings_codec_clause.rs  build_hello.rs  bus_adapter_inbound.rs  bus_array_payload.rs  bus_bytes_payload.rs  bus_config.rs  bus_large_payload.rs  bus_payload_arena_cap.rs  bus_publish_stack_alloca.rs  bus_routing_keys.rs  bus_subscriber.rs  bus_udp_transport.rs  bus_wildcards.rs  bytes_builder.rs  bytes_builder_inplace.rs  bytes_builder_view.rs  bytes_builder_violate.rs  bytes_construction.rs  bytes_view_stale.rs  bytes_view_type.rs  case_fold_and_nested_fstring.rs  children_growable.rs  closed_world_nested_struct.rs  closure_resets_per_epoch.rs  codec_dispatch_roundtrip.rs  coop_pool_basic.rs  coop_pool_run_dispatch.rs  coop_to_pinned_mid_program.rs  cross_locus_from_method.rs  cross_locus_return_chain.rs  cross_seed_imports.rs  cross_seed_locus_arg.rs  crypto_crc32.rs  crypto_sha256_hmac.rs  decimal_alignment.rs  docs_server.rs  dump_pool_residency.rs  f22_as_parent_for_surface.rs  f22_capacity_acceptance.rs  (+122 more)
crates/hale-codegen/tests/fixtures/examples/: README.md
crates/hale-codegen/tests/fixtures/examples/16-schedule-classes/: main.hl
crates/hale-codegen/tests/fixtures/examples/19-pinned-bus/: main.hl
crates/hale-codegen/tests/fixtures/examples/20-pinned-core/: main.hl
crates/hale-codegen/tests/fixtures/examples/25-imports/: main.hl  notional.hl  types.hl
crates/hale-codegen/tests/fixtures/import-fallible-consumer/: main.hl
crates/hale-codegen/tests/fixtures/import-form-vec-multi-consumer/: main.hl
crates/hale-codegen/tests/fixtures/import-nonfallible-consumer/: main.hl
crates/hale-codegen/tests/fixtures/import-three-file-consumer/: main.hl
crates/hale-codegen/tests/fixtures/import-topic-consumer/: main.hl
crates/hale-codegen/tests/fixtures/import-toy-consumer/: main.hl
crates/hale-codegen/tests/fixtures/lib-fallible/: parse.hl
crates/hale-codegen/tests/fixtures/lib-form-vec-multi/: helpers.hl  vec.hl
crates/hale-codegen/tests/fixtures/lib-nonfallible-fn/: helpers.hl
crates/hale-codegen/tests/fixtures/lib-three-file/: a.hl  b.hl  c.hl  vec.hl
crates/hale-codegen/tests/fixtures/lib-topic-source/: topics.hl
crates/hale-codegen/tests/fixtures/lib-toy/: format.hl  greet.hl
crates/hale-runtime/: Cargo.toml
crates/hale-runtime/src/: builtins.rs  bus.rs  eval.rs  lib.rs  value.rs
crates/hale-runtime/tests/: examples.rs  f22_capacity_interpreter.rs  form_hashmap_interpreter.rs  form_ring_buffer_interpreter.rs  form_vec_interpreter.rs  library_shape_interp_parity.rs  method_call_from_free_fn.rs  recognition_submodes_interpreter.rs  stdlib_interp_parity.rs  violate_interpreter.rs
crates/hale-ts-shim/: Cargo.toml
docs/: book.toml
(+416 files in other folders)
