# m96: tree-sitter substrate for Aperio std::ts.
#
# This crate exists to produce `libaperio_ts_shim.a` — a staticlib
# bundling the tree-sitter Rust crate, the Go grammar, and the
# extern "C" wrappers in `runtime/lotus_treesitter.rs` (which is
# the actual lib.rs source, redirected via `[lib].path`).
#
# `aperio-codegen` invokes clang to link the user program against
# this staticlib at compile time. Keeping it as a sibling
# workspace crate (rather than a subcrate of aperio-codegen)
# isolates the tree-sitter dep tree from the codegen crate's
# rlib build, and makes the staticlib artifact discoverable at a
# stable path: `target/{profile}/libaperio_ts_shim.a`.

[package]
name = "aperio-ts-shim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Tree-sitter substrate (std::ts) for the Aperio compiler"

[lib]
name = "aperio_ts_shim"
# The actual source lives next to the other runtime substrates
# (lotus_arena.c, etc.) so all "what links into a compiled
# Aperio program" lives under one directory. The `[lib].path`
# field redirects the lib root here.
path = "../aperio-codegen/runtime/lotus_treesitter.rs"
crate-type = ["staticlib"]

[dependencies]
tree-sitter = "0.22"
tree-sitter-go = "0.21"
